--- a/camera.html
+++ b/camera.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" href="./img/icon.png">
   <title>Admin Dashboard</title>
   <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-database.js"></script>
@@ -140,7 +141,7 @@
       </div>
 
       <h2>Lịch Sử Camera</h2>
-      <label for="image-count-input">Number of Images to Display:</label>
+      <label for="image-count-input" style="display: none;">Number of Images to Display:</label>
       <input type="number" id="image-count-input" min="1" value="5">
       <div class="message">
         <div id="image-grid"></div>
