--- a/camera.html
+++ b/camera.html
@@ -141,7 +141,7 @@
       </div>
 
       <h2>Lịch Sử Camera</h2>
-      <label for="image-count-input" style="display: none;">Number of Images to Display:</label>
+      /*<label for="image-count-input" style="display: none;">Number of Images to Display:</label>*/
       <input type="number" id="image-count-input" min="1" value="5">
       <div class="message">
         <div id="image-grid"></div>
