--- a/camera.html
+++ b/camera.html
@@ -141,8 +141,8 @@
       </div>
 
       <h2>Lịch Sử Camera</h2>
-      /*<label for="image-count-input" style="display: none;">Number of Images to Display:</label>
-      <input type="number" id="image-count-input" min="1" value="5">*/
+      <!--<label for="image-count-input" style="display: none;">Number of Images to Display:</label>
+      <input type="number" id="image-count-input" min="1" value="5"> -->
       <div class="message">
         <div id="image-grid"></div>
         <!-- <table id="message--table">
